--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     background-color: var(--dark-orange);
-    padding: 2em;
+    padding: 0.5em 2em;
 }
 
 .item {
@@ -17,5 +17,5 @@
 }
 
 .logo {
-    height: 80px;
+    height: 100px;
 }
