fix: update header and footer

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,11 @@
+.header {
+    background-color: var(--dark-orange);
+    padding: 0.5em 2em;
+}
+
 .items {
     display: flex;
     justify-content: space-between;
-    background-color: var(--dark-orange);
-    padding: 0.5em 2em;
 }
 
 .item {
