--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@ code {
         monospace;
 }
 
+h2 {
+    font-size: 32px;
+    font-weight: normal;
+    margin-top: 2em;
+}
+
 .container {
     width: 90%;
     max-width: 130em;
