--- a/src/components/Reviews/Review/Review.module.css
+++ b/src/components/Reviews/Review/Review.module.css
@@ -1,3 +1,8 @@
+.review {
+    display: flex;
+    gap: 3em;
+}
+
 .left {
     display: flex;
     flex-direction: column;
@@ -9,4 +14,3 @@
     height: 100px;
     border-radius: 50%;
 }
-
