--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    line-height: 2;
 }
 
 body {
@@ -23,7 +24,7 @@ code {
 h2 {
     font-size: 32px;
     font-weight: normal;
-    margin-top: 2em;
+    margin: 2em 0;
 }
 
 .container {
