--- a/src/components/Pages/MainPage/TopPart/TopPart.module.css
+++ b/src/components/Pages/MainPage/TopPart/TopPart.module.css
@@ -1,7 +1,7 @@
 .topPart {
     display: flex;
     height: 498px;
-    background: url('./../../assets/images/main-part.png');
+    background: url('./../../../../assets/images/main-part.png');
 }
 
 .item {
