--- a/src/components/Pages/LoginPage/LoginForm/LoginForm.module.css
+++ b/src/components/Pages/LoginPage/LoginForm/LoginForm.module.css
@@ -9,16 +9,22 @@
 }
 
 .form > * {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 3em 3em;
+    padding: 5rem 3em;
     border-radius: 12px 0 0 12px;
 }
 
 .left {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
     background-color: var(--dark-orange);
     color: var(--white);
+}
+
+.formPartTitle {
+    margin: 0;
+    margin-bottom: 1em;
+    text-align: center;
 }
 
 .items {
@@ -27,6 +33,29 @@
     gap: 1em;
 }
 
+.button {
+    margin-top: 2em;
+}
+
+
+.button {
+    background-color: transparent;
+    border-radius: 100px;
+    width: max-content;
+    border: 1px solid var(--light-gray);
+    padding: 0.5em 2em;
+}
+
 .redStar {
     color: var(--red);
+}
+
+.link {
+    color: var(--white);
+    font-size: 16px;
+    text-decoration: none;
+    border: 1px solid var(--white);
+    padding: 0.5em 1em;
+    border-radius: 100px;
+    width: max-content;
 }
