--- a/src/components/Pages/MainPage/TopPart/TopPart.module.css
+++ b/src/components/Pages/MainPage/TopPart/TopPart.module.css
@@ -2,6 +2,7 @@
     display: flex;
     height: 498px;
     background: url('./../../../../assets/images/main-part.png');
+    background-size: cover;
 }
 
 .item {
