--- a/src/components/common/Products/ProductCard/ProductCard.module.css
+++ b/src/components/common/Products/ProductCard/ProductCard.module.css
@@ -8,7 +8,6 @@
     justify-self: center;;
 
     width: 300px;
-
 }
 
 
@@ -46,6 +45,7 @@
     align-items: center;
 
     align-self: flex-end;
+    margin-top: auto;
 
     width: max-content;
 
@@ -65,6 +65,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: auto;
 }
 
 .price {
