--- a/src/components/common/Header/Header.module.css
+++ b/src/components/common/Header/Header.module.css
@@ -38,3 +38,28 @@
 .logo {
     height: 100px;
 }
+
+.fullname {
+    color: var(--white);
+}
+
+.userImg {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.user {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
+.user > button {
+    background-color: transparent;
+    border: 1px solid var(--white);
+    outline: none;
+    padding: 0.5em 1em;
+    border-radius: 100px;
+    color: var(--white);
+}
