feat: get comments from API

--- a/src/components/Pages/ReviewsPage/Reviews/Review/Review.module.css
+++ b/src/components/Pages/ReviewsPage/Reviews/Review/Review.module.css
@@ -14,3 +14,9 @@
     height: 100px;
     border-radius: 50%;
 }
+
+.information {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
