feat: add adaptive to main page

--- a/src/components/Pages/MainPage/AboutMini/AboutMini.module.css
+++ b/src/components/Pages/MainPage/AboutMini/AboutMini.module.css
@@ -12,3 +12,16 @@
 .items > img {
     width: 300px;
 }
+
+@media (max-width: 900px) {
+    .items {
+        flex-direction: column;
+        gap: 3em;
+    }
+}
+
+@media (max-width: 500px) {
+    .items > img {
+        width: 200px
+    }
+}
