--- a/src/components/Pages/MainPage/BottomPart/BottomPart.module.css
+++ b/src/components/Pages/MainPage/BottomPart/BottomPart.module.css
@@ -7,3 +7,15 @@
 .items > img {
     width: 400px;
 }
+
+@media (max-width: 1000px) {
+    .items > img {
+        width: 300px;
+    }
+}
+
+@media (max-width: 800px) {
+    .items {
+        flex-direction: column;
+    }
+}
