--- a/src/components/common/Footer/Footer.module.css
+++ b/src/components/common/Footer/Footer.module.css
@@ -1,8 +1,9 @@
 .footer {
-    background-color: var(--dark-gray);
-    color: var(--white);
-    padding: 2em 0;
     margin-top: 5em;
+    padding: 2em 0;
+
+    color: var(--white);
+    background-color: var(--dark-gray);
 }
 
 .topPart {
@@ -19,6 +20,7 @@
 
 .links {
     display: flex;
+    width: 100%;
     gap: 5em;
 }
 
@@ -27,7 +29,34 @@
     text-decoration: none;
 }
 
+.left {
+    display: flex;
+    gap: 3em;
+    align-items: start;
+    justify-content: space-between;
+}
+
 .copyright {
     text-align: center;
     margin-top: 3em;
+}
+
+@media (max-width: 800px) {
+    .logo {
+        width: 200px;
+    }
+}
+
+@media (max-width: 650px) {
+    .left {
+        flex-direction: column;
+        gap: 2em;
+    }
+}
+
+@media (max-width: 400px) {
+    .links {
+        flex-direction: column;
+        gap: 1.5em;
+    }
 }
