--- a/src/components/common/Products/ProductCard/ProductCard.module.css
+++ b/src/components/common/Products/ProductCard/ProductCard.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     gap: 1em;
 
-    justify-self: center;;
+    justify-self: center;
 
     width: 300px;
 }
@@ -65,6 +65,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     margin-top: auto;
 }
 
@@ -86,4 +87,14 @@
 
 .statusPurple {
     color: var(--purple);
+}
+
+@media (max-width: 500px) {
+    .card {
+        width: 250px;
+    }
+
+    .title, .price {
+        font-size: 21px;
+    }
 }
