--- a/src/components/Pages/BinPage/BinProducts/BinProducts.module.css
+++ b/src/components/Pages/BinPage/BinProducts/BinProducts.module.css
@@ -1,12 +1,16 @@
 .table {
     border-collapse: collapse;
+    overflow-x: auto;
 }
 
 .thead > th {
+    padding: 1em;
+
     border-top: 1px solid var(--dark-gray);
     border-bottom: 1px solid var(--dark-gray);
+
     text-align: left;
-    padding: 1em;
+
     font-weight: normal;
 }
 
@@ -14,30 +18,62 @@
     border-bottom: 1px solid var(--dark-gray);
 }
 
-
 .tbody > tr > * {
     padding: 0 1em;
 }
 
-.tbody  h3 {
+.tbody h3 {
     font-weight: normal;
 }
 
 .itog {
     margin: 1em 0;
+
     font-size: 28px;
     font-weight: normal;
 }
 
 .orderButton {
-    background-color: var(--light-pink);
     color: var(--white);
+    background-color: var(--light-pink);
+
+    outline: none;
     border-radius: 12px;
     border: none;
-    outline: none;
+
     padding: 0.5em 1em;
 }
 
 .img {
     width: 300px;
+}
+
+@media (max-width: 1000px) {
+    .thead > th:first-child {
+        display: none;
+    }
+
+    td:first-child {
+        display: none;
+    }
+}
+
+@media (max-width: 800px) {
+    .itog {
+        font-size: 21px;
+    }
+}
+
+@media (max-width: 550px) {
+    .table * {
+        font-size: 14px !important;
+    }
+
+    .thead {
+        padding: 1em 0.5em;
+    }
+
+    .tableWrapper {
+        overflow-x: auto;
+    }
 }
