--- a/src/components/common/Header/Header.module.css
+++ b/src/components/common/Header/Header.module.css
@@ -93,6 +93,8 @@
     .drop:hover .links {
         position: absolute;
 
+        z-index: 1;
+
         display: flex;
         flex-direction: column;
         align-items: start;
