--- a/src/components/Pages/ContactsPage/ContactsMain/ContactsMain.module.css
+++ b/src/components/Pages/ContactsPage/ContactsMain/ContactsMain.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     margin-top: 5em;
 }
 
@@ -13,4 +14,10 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
+}
+
+@media (max-width: 800px) {
+    .items > img {
+        display: none;
+    }
 }
