--- a/src/components/Pages/ReviewsPage/NewReview/NewReview.module.css
+++ b/src/components/Pages/ReviewsPage/NewReview/NewReview.module.css
@@ -1,11 +1,13 @@
 .items {
+    width: max-content;
+
     margin-top: 5em;
     margin-bottom: 3em;
-    width: max-content;
 }
 
 .form {
     padding: 3em;
+
     border: 1px solid var(--light-gray);
     border-radius: 12px;
 }
@@ -13,6 +15,7 @@
 .img {
     width: 100px;
     height: 100px;
+
     border-radius: 50%;
 }
 
@@ -29,11 +32,15 @@
 
 .text {
     width: 700px;
-    resize: vertical;
+
     padding: 1em;
+
     border: 1px solid var(--light-gray);
     border-radius: 12px;
+
     outline: none;
+
+    resize: vertical;
 }
 
 .title {
@@ -41,11 +48,69 @@
 }
 
 .button {
-    background-color: var(--light-pink);
-    color: var(--white);
-    border: none;
-    outline: none;
-    padding: 0.5em 1em;
-    border-radius: 12px;
     margin-top: 2em;
+    padding: 0.5em 1em;
+
+    border: none;
+    border-radius: 12px;
+
+    outline: none;
+    
+    color: var(--white);
+    background-color: var(--light-pink);
+}
+
+@media (max-width: 1100px) {
+    .text {
+        width: 500px;
+    }
+}
+
+@media (max-width: 850px) {
+    .mainItems {
+        flex-direction: column;
+        gap: 1em;
+    }
+}
+
+@media (max-width: 650px) {
+    .form {
+        padding: 1.5em;
+    }
+
+    .img {
+        width: 70px;
+        height: 70px;
+    }
+
+    .text {
+        width: 350px;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 450px) {
+    .text {
+        width: 280px;
+        font-size: 12px;
+    }
+
+    .mainItems {
+        width: max-content
+    }
+
+    .form {
+        width: max-content;
+        padding: 12px;
+    }
+
+    .title {
+        width: 280px
+    }
+}
+
+@media (max-width: 350px) {
+    .text {
+        width: 250px;
+    }
 }
