--- a/src/components/common/FormControls/FormControls.module.css
+++ b/src/components/common/FormControls/FormControls.module.css
@@ -1,11 +1,14 @@
 .formControl.error input,
 .formControl.error textarea 
 {
-    border: 1px solid red;
+    border: 1px solid var(--red);
 }
 
 .formSummaryError {
-    color: lightcoral;
+    background-color: var(--beige);
+    color: var(--red);
+    border: 1px solid var(--red);
+    padding: 1em;
 }
 
 .input {
